--- a/proyecto2/image_IA/EX4/style.css
+++ b/proyecto2/image_IA/EX4/style.css
@@ -1,8 +1,16 @@
-html, body {
+ html, body {
   margin: 0;
   padding: 0;
 }
-
+ body {
+  background-color: #f6f6f6;
+}
 canvas {
   display: block;
+  margin: 20px auto;
+}
+h1 { 
+  margin-left:50px; 
+  display: block;
+  font-size: 30px;
 }
